--- a/src/assets/styles/css/pages/publications/components/publication.css
+++ b/src/assets/styles/css/pages/publications/components/publication.css
@@ -1,6 +1,6 @@
 .publication {
   margin-bottom: 20px;
-  border-bottom: 1px solid rgba(204, 204, 204, 0.6784313725);
+  border-bottom: 1px solid #ccccccad;
   padding-bottom: 25px;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,7 @@
   color: #0082C7;
 }
 .publication .description.non-active {
-  color: rgba(6, 5, 6, 0.768627451);
+  color: #060506c4;
   cursor: default;
 }
 .publication .description .num {
@@ -43,6 +43,7 @@
 @media (max-width: 800px) {
   .publication .description {
     font-size: 1.15em;
+    text-align: left;
   }
   .publication .authors .author {
     font-size: 0.8em;
