--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body,
 }
 
 .container {
-  max-width: 1200px !important;
+  max-width: 1350px !important;
   width: calc(100% - 80px);
   min-height: 100vh;
   margin: 0 auto;
@@ -61,5 +61,6 @@ ul li {
   .container {
     width: calc(100% - 40px);
     padding: 0 20px;
+    padding-top: 15px;
   }
 }
